Listando os contatos na página

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width"/>
 
-<title>AlgaWorks</title>
+<title>Contatos mr </title>
 
 <link rel="stylesheet" th:href="@{/css/estilo.css}" />
 
@@ -18,7 +18,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a th:href="@{*}"> AlgaWorks Contatos </a></li>
+				<li><a th:href="@{/}"> Contatos </a></li>
 
 				<li><a th:href="@{/contatos}"> Listar </a></li>
 
