--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -16,7 +16,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a th:href="@{/}"> AlgaWorks Contatos </a></li>
+				<li><a th:href="@{/}"> Lista contato Estudos </a></li>
 
 				<li><a th:href="@{/contatos}"> Listar </a></li>
 
@@ -37,8 +37,8 @@
 					<tr>	
 						<th>Nome</th>
 						<th>Telefone</th>
-						<th>#</th>
-						<th>#</th>
+						<th>Editar</th>
+						<th>Remover</th>
 					</tr>
 				</thead>
 				
