--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -20,7 +20,7 @@
 		<nav>
 			<ul>
 
-				<li><a th:href="@{/}"> AlgaWorks Contatos </a></li>
+				<li><a th:href="@{/}"> Lista Contatos </a></li>
 
 				<li><a th:href="@{/contatos}"> Listar </a></li>
 
